Small fix to letter-spacing

--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ ul>.notion-list-item:before {
     padding: 1rem 1.5rem !important;
     margin: 1rem 0 !important;
     font-size: var(--quote-size) !important;
-    letter-spacing: -0.25em !important;
+    letter-spacing: -0.025em !important;
     line-height: 1.375;
     background: transparent !important;
 }
